# pyporcc

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/source/: conf.py  data_structures.rst  index.rst  reference.rst
examples/: classify.py  compare_models.py  convert_clicks.py  cpod_vs_st.py  create_model.py  detect_clicks.py  divide_data.py  test_porcc.py
pyporcc/: __init__.py  click_converter.py  click_detector.py  mat2py.py  pamguard.py  porcc.py  porpoise_classifier.py  sound_click.py  soundtrap_hf.py  test_porcc.py  utils.py
pyporcc/data/cosentino/: AllLogModelHQ.m  PorCCAlgorithm.m  trainHQ_data.mat  trainLQ_data.mat
pyporcc/models/: log_models.ini
tests/: test_detector.py
tests/test_data/: ST5293.csv
