[metadata]
name = pyporcc
version = 0.1.3
author = Clea Parcerisas
author_email = clea.parcerisas@vliz.be
description = Adapted PorCC to python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lifewatch/pyporcc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pyporcc